Update form styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,8 +6,8 @@ const year = new Date().getFullYear();
 
 <footer>
   <span class="copyright"
-    >&copy; 2022&hairsp;&ndash;&hairsp;{year} Namesake</span
-  >
+    ><strong>&copy; Namesake</strong> 2022&hairsp;&ndash;&hairsp;{year}
+  </span>
   <div class="social">
     <a
       href="https://www.instagram.com/joinnamesake/"
