--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,4 +16,10 @@ import Logo from "./Logo.astro";
     max-width: 1200px;
     margin-inline: auto;
   }
+
+  a {
+    padding: var(--space-xs);
+    margin: calc(var(--space-xs) * -1);
+    border-radius: var(--radius-xs);
+  }
 </style>
