--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,6 +6,8 @@ html {
 body {
   color: var(--gray-12);
   background-color: var(--background);
+  background-image: url('/speckles-black.svg');
+  background-position: center;
   display: flex;
   min-height: 100dvh;
   position: relative;
@@ -19,6 +21,16 @@ body {
   font-style: normal;
 }
 
+body::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: url('/speckles-purple.svg');
+  background-position: center;
+  pointer-events: none;
+  z-index: 10;
+}
+
 ::selection {
   background: var(--gray-12);
   color: var(--background);
@@ -30,7 +42,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: var(--step-6);
+  font-size: var(--step-5);
   line-height: var(--line-height-single);
   letter-spacing: var(--letter-spacing-condensed);
 }
@@ -82,6 +94,6 @@ a {
 }
 
 :focus-visible {
-  outline: 2px solid var(--gray-12);
+  outline: 2px solid var(--white-a12);
   outline-offset: 2px;
 }
