--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,8 +1,3 @@
-@import "@radix-ui/colors/gray.css";
-@import "@radix-ui/colors/gray-alpha.css";
-@import "@radix-ui/colors/violet.css";
-@import "@radix-ui/colors/white-alpha.css";
-
 :root {
   /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,22,1.25,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --step--1: clamp(0.9375rem, 0.881rem + 0.2826vi, 1.1rem);
@@ -40,6 +35,9 @@
   --radius-m: var(--space-m);
   --radius-l: var(--space-l);
 
-  /* Background */
-  --background: var(--violet-7);
+  /* Colors */
+  --bg-purple: #CDA5EF;
+  --text: #111111;
+  --text-placeholder: rgba(0, 0, 0, 0.5);
+  --white: #FFFFFF;
 }
