--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,8 @@
 import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { RiArrowRightLine } from "react-icons/ri";
-import image from "./namesake-form.png";
+import illustration from "./namesake-form.png";
+import formIllustration from "./form-snail.png";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 ---
@@ -15,7 +16,7 @@ import Footer from "../components/Footer.astro";
   <main>
     <Image
       class="illustration"
-      src={image}
+      src={illustration}
       alt="Some snails and flowers on top of a court order document"
       width={600}
       densities={[1, 2]}
@@ -50,6 +51,13 @@ import Footer from "../components/Footer.astro";
         </p>
       </div>
       <form>
+        <Image
+          class="form-illustration"
+          src={formIllustration}
+          alt="A snail moving to the left"
+          width={240}
+          densities={[1, 2]}
+        />
         <strong>Get notified when we launch:</strong>
         <div class="input-group">
           <input type="email" name="email" placeholder="Your email" required />
@@ -91,7 +99,7 @@ import Footer from "../components/Footer.astro";
   main {
     flex: 1;
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: minmax(460px, 1fr) minmax(0, 1fr);
     gap: var(--space-2xl);
     padding: var(--space-2xl) var(--space-l);
     min-width: 0;
@@ -140,11 +148,19 @@ import Footer from "../components/Footer.astro";
   form {
     color: var(--bg-purple);
     background-color: var(--text);
-    margin-block-start: var(--space-xl);
+    margin-block-start: var(--space-2xl);
     padding: var(--space-l) var(--space-m);
+    position: relative;
 
     @media (width < 540px) {
       width: 100%;
+    }
+
+    .form-illustration {
+      width: 120px;
+      position: absolute;
+      bottom: calc(100% - 4px);
+      right: 20px;
     }
   }
 
