--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { RiArrowRightLine } from "react-icons/ri";
-import illustration from "./namesake-form.png";
-import formIllustration from "./form-snail.png";
+import illustration from "./_images/namesake-form.png";
+import formIllustration from "./_images/form-snail.png";
 ---
 
 <BaseLayout
@@ -107,11 +107,9 @@ import formIllustration from "./form-snail.png";
   }
 
   img {
-    mix-blend-mode: multiply;
     width: 600px;
     max-width: 100%;
     order: 1;
-    user-select: none;
   }
 
   h1 {
