--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,9 +12,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <Image src={emptyShell} alt="Namesake empty shell" width={180} />
     <h1>No one’s home</h1>
     <p>
-      We couldn’t find that page. Check the spelling of the URL or <a href="/"
-        >go home</a
-      >.
+      We couldn’t find that page. <a href="/">Go home?</a>
     </p>
   </div>
 </BaseLayout>
