--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,7 +1,8 @@
 ---
+import { Image } from "astro:assets";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
-import { getCollection, type CollectionEntry } from "astro:content";
+import { getCollection, getEntries, type CollectionEntry } from "astro:content";
 
 export interface Props {
   post: CollectionEntry<"posts">;
@@ -19,18 +20,75 @@ export async function getStaticPaths() {
 }
 
 const { post } = Astro.props;
-const { Content } = await post.render();
 
-const { data } = post;
-const { title, authors, publishDate } = data;
+const { data, render } = post;
+const { Content } = await render();
+
+const authors = await getEntries(data.authors);
 ---
 
-<BaseLayout title={title} description="Updates and news from Namesake.">
-  <article>
-    <header>
-      <h1>{title}</h1>
-      <p>By {authors.join(", ")} on {publishDate}</p>
-    </header>
+<BaseLayout title={data.title} description="Updates and news from Namesake.">
+  <header class="post-header">
+    <h1>{data.title}</h1>
+    <div class="authors">
+      <span>By</span>
+      {
+        authors.map((author) => (
+          <span class="author">
+            {author.data.avatar && (
+              <Image
+                class="avatar"
+                src={author.data.avatar}
+                alt={`${author.data.name} photo`}
+                width={40}
+              />
+            )}
+            {author.data.name}
+          </span>
+        ))
+      }
+      <time datetime={post.data.publishDate.toISOString()}
+        >{data.publishDate.toDateString()}</time
+      >
+    </div>
+  </header>
+  <div class="prose">
     <Content />
-  </article>
+  </div>
 </BaseLayout>
+
+<style lang="scss">
+  .post-header {
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-m);
+    padding-bottom: var(--space-3xl);
+  }
+
+  .authors {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--space-s);
+    font-size: var(--step-1);
+    align-items: center;
+  }
+
+  .author {
+    display: inline-flex;
+    align-items: center;
+    gap: var(--space-xs);
+
+    font-weight: 600;
+  }
+
+  .avatar {
+    filter: grayscale(100%) contrast(1.3);
+    border-radius: 100%;
+  }
+
+  .prose {
+    p + p {
+      margin-top: var(--space-m);
+    }
+  }
+</style>
