--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -22,9 +22,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    align-items: flex-start;
+    justify-content: flex-end;
     gap: var(--space-l);
   }
 
