--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,7 +116,7 @@ const partners = await getCollection("partners");
     underline.show();
   }
 
-  const partners: HTMLElement | null = document.querySelector(".partners ul");
+  const partners: HTMLElement | null = document.querySelector(".partners h2");
   if (partners) {
     const brackets = annotate(partners, {
       type: "bracket",
