--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -167,6 +167,7 @@ const partners = await getCollection("partners");
     flex-direction: column;
     margin-inline: auto;
     gap: var(--space-l);
+    padding-block: var(--space-2xl);
 
     h2 {
       font-size: var(--step-1);
@@ -180,7 +181,6 @@ const partners = await getCollection("partners");
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      padding: var(--space-l);
       gap: var(--space-l) var(--space-2xl);
     }
 
