--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,6 +99,7 @@ const partners = await getCollection("partners");
     const highlight = annotate(whoYouAre, {
       type: "highlight",
       iterations: 1,
+      animate: false,
     });
     highlight.show();
   }
