--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -167,7 +167,7 @@ const partners = await getCollection("partners");
     align-items: center;
     flex-direction: column;
     margin-inline: auto;
-    gap: var(--space-l);
+    gap: var(--space-2xl);
     padding-block: var(--space-2xl);
 
     h2 {
