--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,12 @@ const year = new Date().getFullYear();
 ---
 
 <footer>
-  <span class="copyright"
-    ><strong>&copy; Namesake</strong> 2022&hairsp;&ndash;&hairsp;{year}
-  </span>
+  <div class="links">
+    <span class="copyright"
+      ><strong>&copy; Namesake</strong> 2022&hairsp;&ndash;&hairsp;{year}
+    </span>
+    <a href="/press">Press</a>
+  </div>
   <div class="social">
     <a
       href="https://www.instagram.com/joinnamesake/"
@@ -34,14 +37,17 @@ const year = new Date().getFullYear();
     margin-inline: auto;
   }
 
-  .copyright {
+  .links,
+  .social {
+    display: flex;
+    gap: var(--space-s);
+  }
+
+  .links {
     font-size: var(--step--1);
   }
 
   .social {
-    display: flex;
-    gap: var(--space-s);
-
     a {
       border-radius: var(--radius-xs);
     }
