Add Github link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { RiInstagramLine, RiLinkedinLine } from "react-icons/ri";
+import { RiInstagramLine, RiLinkedinLine, RiGithubLine } from "react-icons/ri";
 
 const year = new Date().getFullYear();
 ---
@@ -12,6 +12,11 @@ const year = new Date().getFullYear();
     <a href="/press">Press</a>
   </div>
   <div class="social">
+    <a
+      href="https://github.com/namesakefyi"
+      aria-label="View Namesake on GitHub"
+      title="View Namesake on GitHub"><RiGithubLine size="24px" /></a
+    >
     <a
       href="https://www.instagram.com/joinnamesake/"
       aria-label="View Namesake on Instagram"
