--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import formIllustration from "./_images/form-snail.png";
 import { getCollection } from "astro:content";
 
 const partners = await getCollection("partners");
+const shuffledPartners = partners.sort(() => 0.5 - Math.random());
 ---
 
 <BaseLayout
@@ -69,7 +70,7 @@ const partners = await getCollection("partners");
       <h2>In partnership with</h2>
       <ul>
         {
-          partners.map((partner) => (
+          shuffledPartners.map((partner) => (
             <li>
               <a
                 href={partner.data.url}
@@ -167,6 +168,8 @@ const partners = await getCollection("partners");
     align-items: center;
     flex-direction: column;
     margin-inline: auto;
+    width: 100%;
+    overflow: hidden;
     gap: var(--space-2xl);
     padding-block: var(--space-2xl);
 
@@ -178,15 +181,25 @@ const partners = await getCollection("partners");
       list-style-type: none;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      max-width: 100%;
+      display: grid;
+      justify-items: center;
       align-items: center;
+      grid-template-columns: repeat(3, 240px);
+      grid-auto-rows: 80px;
       gap: var(--space-l) var(--space-2xl);
-    }
 
-    img {
-      max-width: min(240px, 40vw);
+      @media (width < 900px) {
+        grid-template-columns: repeat(2, minmax(240px, 1fr));
+      }
+
+      @media (width < 600px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      img {
+        max-width: min(240px, 40vw);
+      }
     }
   }
 
