--- a/src/pages/press.astro
+++ b/src/pages/press.astro
@@ -1,10 +1,12 @@
 ---
 import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import dayjs from "dayjs";
 
 import { getCollection } from "astro:content";
 
 const pressArticles = await getCollection("press");
+pressArticles.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 ---
 
 <BaseLayout
@@ -19,11 +21,11 @@ const pressArticles = await getCollection("press");
       pressArticles.map((article) => (
         <li class="article">
           <time datetime={article.data.date.toISOString()}>
-            {article.data.date.toDateString()}
+            {dayjs(article.data.date).format("MMMM YYYY")}
           </time>
           <strong class="outlet">{article.data.outlet}</strong>
           <a href={article.data.url} class="title" target="_blank">
-            {article.data.title}
+            <span>{article.data.title}</span>
           </a>
           {article.data.image && (
             <Image
@@ -54,7 +56,8 @@ const pressArticles = await getCollection("press");
     margin: 0;
     display: flex;
     flex-direction: column;
-    padding-bottom: var(--space-xl);
+    gap: var(--space-3xl);
+    padding-bottom: var(--space-3xl);
   }
 
   .article {
@@ -66,11 +69,17 @@ const pressArticles = await getCollection("press");
       font-size: var(--step-3);
       font-weight: 600;
       text-wrap: balance;
+
+      span {
+        background: var(--bg-purple-overlay);
+        box-decoration-break: clone;
+      }
     }
   }
 
   .image {
     align-self: flex-end;
-    margin-block-start: var(--space-l);
+    margin-block-start: calc(-1 * var(--space-2xl));
+    z-index: -1;
   }
 </style>
